made image !important

--- a/css/croissant.css
+++ b/css/croissant.css
@@ -3,6 +3,6 @@ body {
 }
 
 .croissant-img {
-    background-image: url("/images/croissants.jpg");
+    background-image: url("/images/croissants.jpg") !important;
     background-size: cover;
 }
