--- a/css/croissant.css
+++ b/css/croissant.css
@@ -1,8 +1,13 @@
 body {
-    background-color: #DCB25E;
+  background-color: #dcb25e;
 }
 
 .croissant-img {
-    background-image: url("/images/croissants.jpg") !important;
-    background-size: cover;
+  background-image: url("/images/croissants.jpg") !important;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 0;
+  margin-bottom: 0;
+  overflow: hidden;
+  position: relative;
 }
